--- a/auto.html
+++ b/auto.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>auto</title>
+		<title>week 7</title>
   		<link href="https://fonts.googleapis.com/css?family=Lato:300i" rel="stylesheet">
   		<link rel="stylesheet" type="text/css" href="week7.css">
 	</head>
@@ -27,17 +27,17 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nibh sapien, sollicitudin eget lectus ut, aliquet pellentesque arcu. Morbi molestie hendrerit lacus pulvinar vestibulum.<br><br> Proin ornare dapibus massa. Maecenas turpis odio, venenatis et ullamcorper eget, fermentum nec nisl. Vivamus nec luctus diam. Etiam id velit malesuada, blandit mauris sit amet, luctus odio.<br><br> Pellentesque luctus diam enim, nec efficitur ipsum commodo a. Aenean volutpat magna ac justo finibus, non laoreet tortor dignissim. Nulla faucibus vel ligula non pulvinar. Sed aliquet porta maximus.</p>
 			</div>
 			<div class="slider">
-				<img src="img/fade-slider.png" alt="fade-slider1">
+				<img src="cars/car1.jpg" alt="fade-slider1">
 				<h2>Lorem ipsum dolor sit amet</h2>
 				<p>Consectetur adipiscing elit. Cras nibh sapien, sollicitudin eget lectus ut, aliquet pellentesque arcu. Morbi molestie hendrerit lacus pulvinar vestibulum. Proin ornare dapibus massa. Maecenas turpis odio, venenatis et ullamcorper eget, fermentum nec nisl. Vivamus nec luctus diam. Etiam id velit malesuada, blandit mauris sit , luctus odio. Pellentesque luctus diam enim, nec efficitur ipsum commodo a.</p>
 			</div>
 			<div class="slider2">
-				<img src="img/nivo-slider.png" alt="fade-slider2">
+				<img src="cars/car2.png" alt="fade-slider2">
 				<h2>Lorem ipsum dolor sit amet</h2>
 				<p>Consectetur adipiscing elit. Cras nibh sapien, sollicitudin eget lectus ut, aliquet pellentesque arcu. Morbi molestie hendrerit lacus pulvinar vestibulum. Proin ornare dapibus massa. Maecenas turpis odio, venenatis et ullamcorper eget, fermentum nec nisl. Vivamus nec luctus diam. Etiam id velit malesuada, blandit mauris sit , luctus odio. Pellentesque luctus diam enim, nec efficitur ipsum commodo a.</p>
 			</div>
 			<div class="slider3">
-				<img src="img/bonus-3d-slider.png" alt="fade-slider3">
+				<img src="cars/car3.jpg" alt="fade-slider3">
 				<h2>Lorem ipsum dolor sit amet</h2>
 				<p>Consectetur adipiscing elit. Cras nibh sapien, sollicitudin eget lectus ut, aliquet pellentesque arcu. Morbi molestie hendrerit lacus pulvinar vestibulum. Proin ornare dapibus massa. Maecenas turpis odio, venenatis et ullamcorper eget, fermentum nec nisl. Vivamus nec luctus diam. Etiam id velit malesuada, blandit mauris sit , luctus odio. Pellentesque luctus diam enim, nec efficitur ipsum commodo a.</p>
 			</div>
